Firefly-1886: Improve extract tool behavior for MEFs
  - if Aperture is set beyond 1x1, then evaluate the HDU name for hos to combine